feat: create header

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.index.css">
-    <title>Aula 01 - HTML</title>
+    <link rel="stylesheet" href="assets/styles/styles.index.css">
+    <title>Blog | Senai</title>
 </head>
 <body>
     <header>
-        <div id="profile">
-            <img id="image-profile" src="https://github.com/CaioLacerdaDev.png" alt="Minha foto de perfil do github"> 
+        <div id="logo">
+        <p>Logo aqui</p>
         </div>
-    <div> <h2>A tropa do quatro</h2>
-        <p>Só os de verdade nesse blog</p>
+    <div> <nav class="navbar">
+        <a href="#home">Inicio</a>
+        <a href="#education">Acadêmico</a>
+        <a href="#services">Serviços</a>
+        <a href="#testimonials">Depoimentos</a>
+        <a href="#contact">Contato</a>
+        </nav>
     </div>
     </header>
     
