feat: finish header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <div id="logo">
-        <p>Logo aqui</p>
+        <img id="image-logo" src="assets/Santos_Logo.png" alt="Imagem logo o santos">
         </div>
     <div> <nav class="navbar">
         <a href="#home">Inicio</a>
-        <a href="#education">Acadêmico</a>
-        <a href="#services">Serviços</a>
-        <a href="#testimonials">Depoimentos</a>
+        <a href="#main">Principais</a>
+        <a href="#news">Ultimas noticias</a>
+        <a href="#autor">Autor</a>
         <a href="#contact">Contato</a>
         </nav>
     </div>
