--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
         </nav>
     </div>
     </header>
+    <div id="carousel">
+        <img src="assets/santos.thumb.png.9e911d1fa4123ac1a00d0f513f6266a8.png" alt="Tigrinho pagante">
+    </div>
     
     <div id="principal">
-        <main></main>
-        <aside></aside>
+        <main>
+            <div id="main-new">
+                <img id="image-new" src="assets/Paysandu-x-Santos_00856470_0_.jpg" alt="Imagem do santos e paysandu">
+                <h1>Paysandu perde horrivelmente para Santos de 2x0</h1>
+            </div>
+            <div id="aside">
+                <span id="author">Caio Lacerda</span><span id="date">  20/04/2024</span></div>
+        </main>
+        <aside></aside> 
     </div>
-
     <footer>
         <p>Desenvolvido por <a target="_blank" href="https://github.com/CaioLacerdaDev">CaioDev</a></p>
     </footer>
